# rviss

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md
apps/: main.cc
docs/: instructions.md  linux-boot-checklist.md  qemu-linux-bringup-todo.md  qemu-riscv-virt.md  sail-riscv-integration-todo.md
examples/: Dockerfile
examples/baremetal/: CMakeLists.txt  README.md
examples/baremetal/c_runtime/: runtime.c  runtime.h  start.S
examples/baremetal/hello/: main.c
examples/baremetal/linker/: rv64-baremetal.ld
examples/baremetal/minimal/: exit.S
examples/linux/: README.md
examples/linux/buildroot/: README.md  build.sh  fetch.sh  riscv64_qemu_virt_defconfig
examples/riscv/hello/: build.sh  run.sh
examples/riscv/minimal/: CMakeLists.txt  build.sh  run.sh
include/rviss/: rviss.h
include/rviss/core/: decoder.h
include/rviss/isa/: add.h  addi.h  addiw.h  addw.h  amoadd_d.h  amoadd_w.h  amoand_d.h  amoand_w.h  amomax_d.h  amomax_w.h  amomaxu_d.h  amomaxu_w.h  amomin_d.h  amomin_w.h  amominu_d.h  amominu_w.h  amoor_d.h  amoor_w.h  amoswap_d.h  amoswap_w.h  amoxor_d.h  amoxor_w.h  and.h  andi.h  auipc.h  beq.h  bge.h  bgeu.h  blt.h  bltu.h  bne.h  c_add.h  c_addi.h  c_addi16sp.h  c_addi4spn.h  c_addiw.h  c_addw.h  c_and.h  c_andi.h  c_beqz.h  (+111 more)
include/rvsim/: rvsim.h
include/rvsim/isa/: addi.h  andi.h  instruction.h  instruction_type_i.h  lui.h  opcode.h  ori.h  register.h  slli.h  slti.h  sltiu.h  srai.h  srli.h  xori.h
src/core/: decode_type_amo.cc  decode_type_b.cc  decode_type_ca.cc  decode_type_cb.cc  decode_type_ci.cc  decode_type_ciw.cc  decode_type_cj.cc  decode_type_cl.cc  decode_type_cr.cc  decode_type_cs.cc  decode_type_css.cc  decode_type_i.cc  decode_type_j.cc  decode_type_r.cc  decode_type_s.cc  decode_type_u.cc  decoder.cc  decoder_internal.h
src/isa/: add.cc  addi.cc  addiw.cc  addw.cc  amoadd_d.cc  amoadd_w.cc  amoand_d.cc  amoand_w.cc  amomax_d.cc  amomax_w.cc  amomaxu_d.cc  amomaxu_w.cc  amomin_d.cc  amomin_w.cc  amominu_d.cc  amominu_w.cc  amoor_d.cc  amoor_w.cc  amoswap_d.cc  amoswap_w.cc  amoxor_d.cc  amoxor_w.cc  and.cc  andi.cc  auipc.cc  beq.cc  bge.cc  bgeu.cc  blt.cc  bltu.cc  bne.cc  c_add.cc  c_addi.cc  c_addi16sp.cc  c_addi4spn.cc  c_addiw.cc  c_addw.cc  c_and.cc  c_andi.cc  c_beqz.cc  (+109 more)
tests/: cleanup.sh
tests/integration/: boot-buildroot-linux.sh  run-all.sh  run-riscv-examples.sh
tests/unit/: decode_type_amo_test.cc  decode_type_b_test.cc  decode_type_ca_test.cc  decode_type_cb_test.cc  decode_type_ci_test.cc  decode_type_ciw_test.cc  decode_type_cj_test.cc  decode_type_cl_test.cc  decode_type_cr_test.cc  decode_type_cs_test.cc  decode_type_css_test.cc  decode_type_i_test.cc  decode_type_j_test.cc  decode_type_r_test.cc  decode_type_s_test.cc  decode_type_u_test.cc  instruction_test.cc  instruction_type_amo_test.cc  instruction_type_b_test.cc  instruction_type_ca_test.cc  instruction_type_cb_test.cc  instruction_type_ci_test.cc  instruction_type_ciw_test.cc  instruction_type_cj_test.cc  instruction_type_cl_test.cc  instruction_type_cr_test.cc  instruction_type_cs_test.cc  instruction_type_css_test.cc  instruction_type_i_test.cc  instruction_type_j_test.cc  instruction_type_r_test.cc  instruction_type_s_test.cc  instruction_type_u_test.cc  register_test.cc
