cmake_minimum_required(VERSION 3.16)

project(rviss LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include(CTest)

add_library(rviss
    src/isa/add.cc
    src/isa/addw.cc
    src/isa/addiw.cc
    src/isa/addi.cc
    src/isa/amoadd_d.cc
    src/isa/amoadd_w.cc
    src/isa/amoand_d.cc
    src/isa/amoand_w.cc
    src/isa/amomax_d.cc
    src/isa/amomax_w.cc
    src/isa/amomaxu_d.cc
    src/isa/amomaxu_w.cc
    src/isa/amomin_d.cc
    src/isa/amomin_w.cc
    src/isa/amominu_d.cc
    src/isa/amominu_w.cc
    src/isa/amoor_d.cc
    src/isa/amoor_w.cc
    src/isa/amoswap_d.cc
    src/isa/amoswap_w.cc
    src/isa/amoxor_d.cc
    src/isa/amoxor_w.cc
    src/isa/and.cc
    src/isa/andi.cc
    src/isa/auipc.cc
    src/isa/beq.cc
    src/isa/bge.cc
    src/isa/bgeu.cc
    src/isa/blt.cc
    src/isa/bltu.cc
    src/isa/bne.cc
    src/isa/c_add.cc
    src/isa/c_addi.cc
    src/isa/c_addi16sp.cc
    src/isa/c_addiw.cc
    src/isa/c_addw.cc
    src/isa/c_and.cc
    src/isa/c_andi.cc
    src/isa/c_beqz.cc
    src/isa/c_bnez.cc
    src/isa/c_ebreak.cc
    src/isa/c_jalr.cc
    src/isa/c_jr.cc
    src/isa/c_ldsp.cc
    src/isa/c_li.cc
    src/isa/c_lui.cc
    src/isa/c_lwsp.cc
    src/isa/c_mv.cc
    src/isa/c_nop.cc
    src/isa/c_or.cc
    src/isa/c_srai.cc
    src/isa/c_srli.cc
    src/isa/c_slli.cc
    src/isa/c_sub.cc
    src/isa/c_subw.cc
    src/isa/c_xor.cc
    src/isa/csrrci.cc
    src/isa/csrrc.cc
    src/isa/csrrs.cc
    src/isa/csrrsi.cc
    src/isa/csrrwi.cc
    src/isa/csrrw.cc
    src/isa/div.cc
    src/isa/divu.cc
    src/isa/divuw.cc
    src/isa/divw.cc
    src/isa/ecall.cc
    src/isa/ebreak.cc
    src/isa/fence.cc
    src/isa/fence_i.cc
    src/isa/instruction.cc
    src/isa/instruction_type_amo.cc
    src/isa/instruction_type_b.cc
    src/isa/instruction_type_ca.cc
    src/isa/instruction_type_cb.cc
    src/isa/instruction_type_ci.cc
    src/isa/instruction_type_ciw.cc
    src/isa/instruction_type_cj.cc
    src/isa/instruction_type_cl.cc
    src/isa/instruction_type_cr.cc
    src/isa/instruction_type_cs.cc
    src/isa/instruction_type_css.cc
    src/isa/instruction_type_i.cc
    src/isa/instruction_type_j.cc
    src/isa/instruction_type_r.cc
    src/isa/instruction_type_s.cc
    src/isa/instruction_type_u.cc
    src/isa/jalr.cc
    src/isa/lb.cc
    src/isa/lbu.cc
    src/isa/ld.cc
    src/isa/lh.cc
    src/isa/lhu.cc
    src/isa/lr_d.cc
    src/isa/lr_w.cc
    src/isa/lui.cc
    src/isa/lw.cc
    src/isa/lwu.cc
    src/isa/mret.cc
    src/isa/mul.cc
    src/isa/mulh.cc
    src/isa/mulhsu.cc
    src/isa/mulhu.cc
    src/isa/mulw.cc
    src/isa/ori.cc
    src/isa/rem.cc
    src/isa/remu.cc
    src/isa/remuw.cc
    src/isa/remw.cc
    src/isa/or.cc
    src/isa/sfence_vma.cc
    src/isa/sb.cc
    src/isa/sc_d.cc
    src/isa/sc_w.cc
    src/isa/sd.cc
    src/isa/sh.cc
    src/isa/sll.cc
    src/isa/sllw.cc
    src/isa/slli.cc
    src/isa/slliw.cc
    src/isa/slt.cc
    src/isa/srai.cc
    src/isa/sltu.cc
    src/isa/sra.cc
    src/isa/sraw.cc
    src/isa/sraiw.cc
    src/isa/sret.cc
    src/isa/slti.cc
    src/isa/sltiu.cc
    src/isa/sub.cc
    src/isa/subw.cc
    src/isa/sw.cc
    src/isa/srl.cc
    src/isa/srlw.cc
    src/isa/srli.cc
    src/isa/srliw.cc
    src/isa/uret.cc
    src/isa/wfi.cc
    src/isa/xor.cc
    src/isa/xori.cc
)

target_include_directories(rviss
    PUBLIC ${PROJECT_SOURCE_DIR}/include
)

add_executable(main
    apps/main.cc
)

target_link_libraries(main
    PRIVATE rviss
)

if(BUILD_TESTING)
    include(FetchContent)

    FetchContent_Declare(
        Catch2
        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
        GIT_TAG v3.8.1
    )
    FetchContent_MakeAvailable(Catch2)

    list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)

    add_executable(rviss_tests
        tests/unit/instruction_type_amo_test.cc
        tests/unit/instruction_type_b_test.cc
        tests/unit/instruction_type_ca_test.cc
        tests/unit/instruction_type_cb_test.cc
        tests/unit/instruction_type_ci_test.cc
        tests/unit/instruction_type_cr_test.cc
        tests/unit/instruction_type_i_test.cc
        tests/unit/instruction_type_j_test.cc
        tests/unit/instruction_type_r_test.cc
        tests/unit/instruction_type_s_test.cc
        tests/unit/instruction_type_u_test.cc
        tests/unit/register_test.cc
    )

    target_link_libraries(rviss_tests
        PRIVATE
        rviss
        Catch2::Catch2WithMain
    )

    include(Catch)
    catch_discover_tests(rviss_tests)
endif()
